--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,32 +21,64 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:background="@color/defaultBackground"
             android:orientation="vertical"
             >
 
-            <include
-                android:id="@+id/search_layout"
-                layout="@layout/search_layout"
+            <ImageView
+                android:id="@+id/main_whatsnew_imageview"
                 android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:scaleType="fitStart"
                 android:layout_height="wrap_content" />
 
-            <com.firebox.androidapp.util.DefaultTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hello World!" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <!--<ImageView
+                    android:id="@+id/main_whatsnew_imageview"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:scaleType="center"
+                    android:layout_height="wrap_content" />-->
+                <ImageView
+                    android:id="@+id/main_whatsnew_overlay_imageview"
+                    android:layout_width="match_parent"
+                    android:scaleType="fitStart"
 
-            <Button
-                android:id="@+id/test_button"
-                android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginBottom="20dp" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello yes"
-                />
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin">
+
+                <com.firebox.androidapp.util.DefaultTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hello World!" />
+
+                <Button
+                    android:id="@+id/test_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hello yes"
+                    />
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
