--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -9,14 +9,14 @@
         app:showAsAction="never" /> -->
 
 
-    <item
+    <!--<item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="Search"
         android:orderInCategory="50"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom"
-        />
+        />-->
 
     <item
         android:id="@+id/view_basket2"
